--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <li><a href="#experience">Rad Experience</a></li>
                         <li><a href="#contact">Hit Me Up</a></li>
                     </ul>
-                    <p>Email: <a href="mailto:aleksey1kabaev@gmail.com"><img src="img/email.gif" alt="Email me!"></a><br>
+                    <p>Email: <br><a href="mailto:aleksey1kabaev@gmail.com"><img src="img/email.gif" alt="Email me!"></a><br>
                 </td>
                 <td>
                     <h2 id="about">About Me</h2>
